<resources>
    <string name="app_name">Homeal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Hello uarts</string>
    <string name="back_string">Back key</string>
    <string name="FAQ">도 움 말</string>
    <string name="Currency_Setting">화 폐 설 정</string>
    <string name="Language_Setting">언 어 설 정</string>
    <string name="Leave_Membership">회 원 탈 퇴</string>
    <string name="Profile">개 인 정 보</string>
    <string name="Bookmark">찜 목 록</string>
    <string name="delete">지우기</string>
    <string name="notice">알림</string>
    <string name="SettingActivity_appbar">환 경 설 정</string>
    <string name="PersonaldataActivity_appbar">개 인 정 보</string>
    <string name="AddressaActivity_appbar">주 소 입 력</string>
    <string name="search">검색</string>
    <string name="EtZzimActivity_appbar">찜 목 록</string>
    <string name="Logout">로 그 아 웃</string>
    <string name="taste">맛</string>
    <string name="price">가 격</string>
    <string name="clean">청 결</string>
    <string name="kindness">친 절</string>
    <string name="total">총 점</string>
    <string name="review">후 기</string>
    <string name="review_finish">후 기 완 료</string>
    <string name="time">시 간</string>
    <string name="attitude">예 절</string>
    <string name="tos_dialog">약관에 동의하셔야 서비스를 이용 할 수 있습니다.</string>
    <string name="sign_up">내용을 입력해주세요.</string>
    <string name="login_dialog">앱을 종료하시겠습니까?</string>
    <string name="tos_info">이 내용은 다음과 같습니다...</string>
    <string name="infockdetail_name">상세페이지</string>
    <string name="ck_detail_food">Introduce My Food</string>
    <string name="ck_detail_total">총점</string>
    <string name="ck_detail_taste">맛</string>
    <string name="ck_detail_price">가격</string>
    <string name="ck_detail_kind">친절</string>
    <string name="ck_detail_clean">청결</string>
    <string name="facebook_app_id">1588148394819907</string>
    <string name="ck_home_fabedit">메뉴편집</string>
    <string name="ck_home_fabinsert">메뉴추가</string>
    <string name="title_activity_maps">Map</string>
    <string name="et_reservation_cancle">취소</string>
    <string name="et_reservation_confire">승인</string>
    <string name="et_reservation_write">후기쓰기</string>
    <string name="et_reservation_end">종료</string>
    <string name="ck_home_fabschedule">일정삭제</string>
    <string name="et_text_reservation_request">예약진행중</string>
    <string name="et_text_reservation_complete">예약성공</string>
    <string name="et_text_reservation_end">식사종료</string>
    <string name="text_ck_reserve_request">예약요청</string>
    <string name="text_ck_reserve_request_complete">예약완료</string>
    <string name="text_ck_reserve_eat_end">식사종료</string>
    <string name="text_btn_ck_reserve_request">승인</string>
    <string name="text_btn_ck_reserve_disagree">거절</string>
    <string name="text_ck_reserve_cancle">예약취소</string>
    <string name="text_ck_reserve_write">후기쓰기</string>
    <string name="ck_home_dialog">매뉴를 삭제하겠습니까?</string>
    <string name="personal_data">개인정보</string>
    <string name="cancel">취소</string>
    <string name="OK">확인</string>
    <string name="zzim_list">찜목록</string>
    <string name="setting">환경설정</string>
    <string name="text_homeal_welcome">Welcome Homeal</string>
    <string name="text_homeal_main">여행은 먹어보는거야</string>
    <string name="menu_add_foodname">음식이름</string>
    <string name="menu_add_foodPrice">가격</string>
    <string name="menu_add_foodIntro">음식설명</string>
    <string name="menu_add_hint">입력해주세요.</string>
    <string name="ck_home_fabscheduleinsert">일정추가</string>
    <string name="ck_home_mornig">아침</string>
    <string name="ck_home_launch">점심</string>
    <string name="ck_home_dinner">저녁</string>
    <string name="ck_home_reservecount">예약가능인원</string>
    <string name="change">수정</string>
    <string name="change_finish">수정완료</string>
    <string name="leavemembership_dialog">회원탈퇴 하시겠습니까?</string>
    <string name="advice1" formatted="false">Homeal(호메알)은 어떤 서비스인가요?</string>
    <string name="advice1_1" formatted="false">Homeal(호메알)은 정성 어린 가정식을 함께 먹으며, 잊을 수 없는 순간을 만들 수 있도록 세계인을 묶어주는 서비스입니다. \n 문화와 언어가 다를 지라도 우리는 따뜻한 마음과 음식으로 그 한계를 넘어 교류할 수 있습니다. \n 낯선 여행지에 나를 위해 정성껏 준비된 음식을 맛 볼 수 있는 기회, 우리집 식탁에 몇 벌의 수저를 더 놓음으로써 다른 나라의 친구를 초대할 수 있는 기회. \n 바로 호메알입니다. \n 시작은 한국의 Cooker(쿠커)와 한국을 방문한 Eater(이터)를 이어주는 것이지만, 세계인 모두가 자신의 가정식을 나누고, 맛볼 수 있는 그날을 기대합니다</string>
    <string name="advice2" formatted="false">Homea(호메알)에 가입하는 것은 무료인가요?</string>
 <string name="advice2_1" formatted="false">Homeal(호메알) 서비스에 가입하는 것은, Cooker(쿠커)와 Eater(이터) 모두 무료입니다.\n 쿠커가 되길 원하시는 분들은, 가입 후 앱에 본인만의 특별한 식단을 올릴 수 있는 여유가 필요합니다.\n 이터는 호메알 앱을 통해 몇 번의 클릭만으로 잊을 수 없는 식사시간을 예약하실 수 있습니다.
</string>
    <string name="advice3" formatted="false">어떻게 Cooker(쿠커)가 될 수 있나요?</string>
    <string name="advice3_1" formatted="false">가장 먼저, Cooker(쿠커)로 가입해 주세요.\n 가입신청 후 곧 쿠커로서의 자격을 승인 받을 수 있습니다. \n 그 다음에는 쿠커페이지에서 자신만의 식단을 구성해 보세요. \n 식단을 구성한 후에는 이터가 예약요청을 할 때까지 기다려 주세요. 식단 등록 또한 무료입니다.
</string>
    <string name="advice4" formatted="false">Cooker(쿠커)가 Eater(이터)와 식사를 하게 되면, Homeal(호메알)이 수수료를 가져가나요?</string>
    <string name="advice4_1" formatted="false">Cooker(쿠커)가 음식 가격을 정하는 것은 자유입니다. 가격은 식재료 비용을 비롯해 쿠커가 음식을 준비하는 데 들인 시간 및 정성 등이 고려되어야 합니다. Homeal(호메알)은 쿠커가 정한 음식 가격의 20%를 중개수수료로 가져갑니다. \n 호메알은 이터가 지급한 금액에서 20%를 제한 금액을 쿠커에게 전달합니다</string>
    <string name="advice5" formatted="false">음식을 제공할 날짜를 정할 수 있나요?</string>
    <string name="advice5_1" formatted="false">쿠커 자신의 일정 조정을 위해서, 이터를 환영할 수 있는 날짜를 정할 수 있습니다. \n 이터는 쿠커가 정해놓은 날짜 안에서 예약문의를 할 수 있습니다. \n 그밖에 더 자세한 시간 조정을 원한다면, 이터가 앱 내의 채팅을 통해 직접적인 연락이 옵니다.</string>
    <string name="advice6" formatted="false">음식에 대한 설명을 할 수 있나요?</string>
    <string name="advice6_1" formatted="false">물론이죠. \n 쿠커는 자신의 음식에 얽힌 이야기를 쓸 수 있습니다. \n 음식을 소개하는 멋진 말을 준비해 보세요!</string>
    <string name="advice7" formatted="false">어떻게 식단에 대한 합리적인 가격을 정할 수 있나요?</string>
    <string name="advice7_1" formatted="false">합리적인 가격은 가장 크게 음식 재료의 가격에 따라 달라집니다. \n 더불어 쿠커가 음식을 준비하는 데 들인 시간이나 요리법의 어려움 등을 고려할 수 있습니다. \n 해당 음식을 식당에서 먹을 때의 가격을 참고하는 방법도 있습니다. \n 물론 터무니없는 가격은 이터들에게 환영 받지 못할 것입니다.</string>
    <string name="advice8" formatted="false">예약요청에 대해 언제까지 답해야 하나요?</string>
    <string name="advice8_1" formatted="false">예약요청이 들어오면 48시간 안에 승인 또는 거절 버튼을 눌러 응답해야 합니다. 아무런 응답 없이 48시간이 지나면 해당 예약은 자동 취소됩니다.</string>
    <string name="advice9" formatted="false">저희 집 안에서 지켜주어야 할 약속을 정할 수 있나요?</string>
    <string name="advice9_1" formatted="false">당연합니다. \n 집이라는 개인적인 공간에 손님을 들이는 것이기에 쿠커는 자기소개를 작성할 때, 이터가 방문시 지켜주었으면 하는 부분에 대해 제시할 수 있습니다. \n 예를 들면, 실내 금연, 애완동물 출입 금지 등을 비롯해 식사 시 지켜주었으면 하는 부분에 대한 것입니다</string>
    <string name="advice10" formatted="false">식사에 대한 비용은 언제 정산 받을 수 있나요?</string>
    <string name="advice10_1" formatted="false">식사 후 호메알이 20%의 수수료를 제외한 금액을 쿠커의 은행 계좌로 넣어줍니다.</string>
    <string name="advice11" formatted="false">모든 예약을 받아야 하나요?</string>
    <string name="advice11_1" formatted="false">아닙니다. \n 쿠커는 모든 예약을 개인의 의사에 따라 승인하거나 거절할 수 있습니다.</string>
    <string name="advice12" formatted="false">이미 승인한 예약을 취소할 수 있나요?</string>
    <string name="advice12_1" formatted="false">호메알은 쿠커가 예약을 취소해야만 하는 상황이 일어나는 것을 이해합니다. \n 하지만 쿠커가 예약을 취소할 수 있는 것은 식사가 이루어지는 날의 7일 전 까지만 가능합니다. \n 또한 쿠커가 예약을 취소할 경우에는 이터가 지불한 금액 전부와 그 금액의 5%를 추가로 환불해야 합니다</string>
    <string name="advice13" formatted="false">왜 다녀간 Eater(이터) 에 대해 평가하나요?왜 다녀간 Eater(이터) 에 대해 평가하나요?</string>
    <string name="advice13_1" formatted="false">호메알은 단순히 돈을 받고 음식을 파는 식당과 다릅니다. \n 또한 집이라는 개인 공간에 낯선 사람을 들이는 것인 만큼 안전성이 중요합니다. \n 때문에 자신이 만났던 이터에 대해 평가를 남김으로써 이터들이 보다 예의를 지키게 하고, 다른 쿠커들이 예약을 승인할 때 참고할 수 있도록 하기 위함 입니다</string>
    <string name="advice14" formatted="false">다녀간 Eater(이터) 에 대해 평가하면 무엇을 얻나요?</string>
    <string name="advice14_1" formatted="false">다녀간 이터에 대한 평가를 남길 시, 쿠커 자신의 신뢰도 점수가 올라갑니다.</string>
    <string name="advice15" formatted="false">다녀간 Eater(이터) 에 대해 평가하는 항목은 무엇인가요?</string>
    <string name="advice15_1" formatted="false">다녀간 이터에 대한 평가 기준은 시간, 예절, 총점, 자유글로 총 4가지 항목입니다.\n - 시간 : 이터가 만나기로 약속 한 시간과 예정된 식사 시간을 잘 지켰는지에 대한 평가\n - 예절 : 쿠커가 제시한 방문예절, 식사예절 등에 관한 규칙을 잘 지켰는지에 대한 평가\n - 총점 : 이터에 대한 전반적인 평가\n - 자유글 : 이터를 만난 것에 대한 생각이나 느낌을 글로 직접 입력
</string>
    <string name="advice16" formatted="false">좋은 Cooker(쿠커)라는 사실을 어떻게 아나요?</string>
    <string name="advice16_1" formatted="false">예약하고자 하는 쿠커가 좋은 사람인지 알 수 있는 방법은 여러가지 입니다. \n 첫 번째로, 쿠커의 페이지에서 그의 사과 설명을 꼼꼼히 읽어보세요. 쿠커의 요리 방법을 비롯해 전반적인 취향을 알아볼 수 있습니다. \n 두 번째로, 다른 이터들이 남긴 후기를 살펴보세요. 호메알은 쿠커와 이터 상호간의 평가를 통해 신뢰도를 높이고 있습니다. \n 마지막으로, 쿠커에게 호메알 채팅기능을 이용해 연락할 수 있습니다. 대화를 통해 쿠커에 대해 더 알아보세요.
    \n 이 모든 과정들이 호메알에서 이루어지며, 여러분은 잊을 수 없는 경험을 할 수 있습니다!</string>
    <string name="advice17" formatted="false">Cooker(쿠커)가 제 예약을 받아들이기까지 얼마나 기다려야 하나요?</string>
    <string name="advice17_1" formatted="false">쿠커는 이터로부터 예약문의를 요청 받은 후 48시간 안에 응답해야만 합니다. 쿠커로부터 아무런 연락이 없다면, 48시간 후 예약은 자동 취소됩니다.
    n 쿠커가 보다 빨리 당신의 예약 문의를 확인하길 원한다면 호메알 채팅기능을 이용해 연락해 보길 바랍니다. </string>
    <string name="advice18" formatted="false">Cooker(쿠커)가 어떤 사람인지 어떻게 알 수 있나요?</string>
    <string name="advice18_1" formatted="false">호메알에는 쿠커에 대한 다양한 정보가 있습니다. \n 이 정보들은 쿠커로서 등록하는 과정에서 수집한 것으로, 그들의 취미를 비롯해서 왜 쿠커가 되어 이터들을 만나고 싶어하는지 알 수 있습니다. \n 쿠커에 대해 더 알고 싶다면, 호메알 채팅 기능을 이용해 쿠커에게 연락해 보세요. 쿠커페이지에서 채팅하기 버튼을 누르는 것만으로 당신은 쿠커와 대화할 수 있습니다.
    \n 또한 쿠커페이지에서 쿠커의 얼굴, 음식 또는 집안 사진까지 볼 수 있습니다. \n 사진들을 통해 쿠커집에 도착하는 동안 설렘을 가질 수 있겠죠?\n 호메알은 다른 이들이 남긴 후기를 읽어보는 것 또한 추천합니다. 식사를 하며 많은 대화를 나눈 이들이 남긴 글 만큼 정확한 정보는 없습니다.\n 호메알의 쿠커들은 모두 친절하고, 그들이 준비한 음식은 근사할 겁니다. 이터로서도 예의를 지키고, 쿠커를 존중해 준다면 분명 멋진 경험이 될 겁니다.
    n 혹시 너무나도 이상한 쿠커를 발견했다면 제시된 메일로 연락주시길 바랍니다. homealcookers@google.com
</string>
    <string name="advice19" formatted="false">확정된 예약에 대한 상세내용과 위치는 어떻게 알 수 있나요?</string>
    <string name="advice19_1" formatted="false">예약과 관련된 사항은 ‘예약현황’에서 알 수 있습니다. 식사가 진행되는 장소의 상세 주소는 예약확정 후 자동적으로 표기됩니다. 지도로 찾아오기 불편한 위치일 경우 쿠커가 채팅을 통해 알려줄 것입니다.
    만약 예약을 문의한 후 쿠커로부터 48시간 이내에 아무런 반응이 없다면, 예약은 자동 취소됩니다.
    호메알은 채팅을 통해 쿠커와 이터가 연락하는 걸 장려합니다.
</string>
    <string name="advice20" formatted="false">예약을 취소할 수 있나요?</string>
    <string name="advice20_1" formatted="false">호메알은 일상에서 예기치 못한 일들이 벌어지는 것을 이해합니다. \n 다만 쿠커와 이터간의 약속으로 이루어지는 식사인 만큼 취소에 대한 안내를 드립니다.\n 1.    식사예정일 7일 전까지 취소할 시 전액 환불\n 2.    식사예정일 5일 전까지 취소할 시 50% 환불\n 3. 식사예정일 3일 전부터는 전액 환불 불가 \n만약 취소를 해야하는 상황이 생긴다면, 쿠커에게 사유를 말하고 양해를 구해주시길 바랍니다.</string>
    <string name="advice21" formatted="false">Cooker(쿠커)가 취소를 하는 경우에는 환불 받을 수 있나요?</string>
    <string name="advice21_1" formatted="false">물론입니다. \n 쿠커에게 사정이 생겨 승인한 예약에 대해 취소할 경우 이터는 전액 환불을 받을 수 있습니다. </string>
    <string name="advice22" formatted="false">Homea(호메알)을 이용할 경우 수수료를 내나요?</string>
    <string name="advice22_1" formatted="false">호메알은 거래 금액의 20%를 중개수수료를 얻습니다. 이는 호메알이 좋은 쿠커를 찾고, 선정하여 관리하는 데 쓰이는 비용으로 사용됩니다. </string>
    <string name="advice23" formatted="false">왜 만났던 Cooker(쿠커)에 대해 평가하나요?</string>
    <string name="advice23_1" formatted="false">호메알은 사람과 사람이 만나는 서비스 입니다. \n 또한 이터는 서비스 이용에 대한 요금을 지불합니다.\n 따라서 이터는 자연스럽게 쿠커는 친절할 것이고, 음식 또한 맛있을 것이라 생각합니다. \n 그렇기에 평가를 통해 다른 이터들이 좋은 쿠커와 잊지못할 추억을 만드는 데 도움이 될 수 있기 때문입니다.</string>
    <string name="advice24" formatted="false">만났던 Cooker(쿠커)에 대해 평가하면 무엇을 얻나요?</string>
    <string name="advice24_1" formatted="false">만났던 쿠커에 대한 평가를 남길 시, 이터는 지불했던 금액의 5%를 호메알 포인트로 얻게 됩니다.</string>
    <string name="advice25" formatted="false">만났던 Cooker(쿠커)에 대해 평가하는 항목은 무엇인가요?</string>
    <string name="advice25_1" formatted="false">만났던 쿠커에 대한 평가 기준은 총 6가지 항목입니다.\n - 맛 : 쿠커가 제공한 음식의 맛이 얼마나 맛있었는가\n - 가격 : 쿠커가 제공한 음식이 지불한 금액 만큼의 가치가 있었는가\n - 친절 : 첫 만남부터 식사를 진행하는 등 쿠커가 전반적으로 친절했는가
    \m - 청결 : 식재료부터 식사도구, 집안 등 전체적으로 청결했는가\m - 총점 : 쿠커에 대한 전반적인 평가\m - 자유글 : 쿠커를 만난 것에 대한 생각이나 느낌을 글로 직접 입력</string>
    <string name="ck_home_fabchat">채팅</string>
    <string name="ck_home_fabsend">예약요청</string>
    <string name="reserve_date">날짜</string>
    <string name="reserve_count">예약인원</string>
    <string name="reserve_time">시간</string>
    <string name="menu_add_activation">활성화</string>
    <string name="menu_add_curency">원</string>
</resources>