<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sm.ej.nk.homeal.CkWriteReViewActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_ck_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_ck_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar_ck_main"
        android:orientation="horizontal"
        android:id="@+id/linear_time"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/time"
            android:layout_gravity="center_vertical"/>

        <RatingBar
            android:theme="@style/RatingBar"
            android:rating="3.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_time"
        android:orientation="horizontal"
        android:id="@+id/linear_attitude"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/attitude"
            android:layout_gravity="center_vertical"/>

        <RatingBar
            android:theme="@style/RatingBar"
            android:rating="3.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_attitude"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_attitude"
        android:orientation="horizontal"
        android:id="@+id/linear_total"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total"
            android:layout_gravity="center_vertical"/>

        <RatingBar
            android:theme="@style/RatingBar"
            android:rating="3.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_total"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/linear_total"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/review"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:theme="@style/ReserveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ck_review_finish"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/review_finish"/>

</RelativeLayout>
