<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sm.ej.nk.homeal.MenuAddActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_menu_add"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/image_menu_add" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_add_foodname"
                        android:id="@+id/textView29" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:id="@+id/edit_menu_add_foodname"
                        android:nextFocusDown="@+id/edit_menu_add_foodprice"
                        android:inputType="text"
                        android:hint="@string/menu_add_hint" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:src="@drawable/mypage_line" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_add_foodPrice"
                        android:id="@+id/textView30" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="number"
                        android:nextFocusDown="@+id/edit_menu_add_foodinfo"
                        android:id="@+id/edit_menu_add_foodprice"
                        android:hint="@string/menu_add_hint"
                        android:gravity="right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_add_curency"
                        android:id="@+id/text_menu_add_price"
                        android:visibility="invisible" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView8"
                    android:src="@drawable/mypage_line" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/menu_add_foodIntro"
                        android:id="@+id/textView31" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_add_activation"
                        android:id="@+id/textView5"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:id="@+id/image_menu_add_activation"
                        android:src="@drawable/homeal_on_button" />


                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:id="@+id/edit_menu_add_foodinfo"
                    android:hint="@string/menu_add_hint"
                    android:gravity="top|left" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/fab_menu_add_ok"
        android:layout_margin="@dimen/ck_detail_floating_bottommargin" />
</RelativeLayout>
