<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sm.ej.nk.homeal.SettingActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_ck_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_ck_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar_ck_main"
        android:layout_marginLeft="@dimen/setting_box_margin_left"
        android:layout_marginTop="40dp"
        android:text="Settings"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/linear_et_faq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_box_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="@dimen/setting_box_margin_left"
        android:layout_marginRight="@dimen/setting_box_margin_left"
        android:layout_marginTop="32dp"
        android:background="@drawable/edge"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_box_text_margin"
            android:text="@string/FAQ"
            android:textSize="@dimen/setting_box_ko_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_box_text_margin"
            android:text="FAQ"
            android:textColor="#d9d9d9"
            android:textSize="@dimen/setting_box_eng_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_et_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_box_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linear_et_faq"
        android:layout_marginLeft="@dimen/setting_box_margin_left"
        android:layout_marginRight="@dimen/setting_box_margin_left"
        android:layout_marginTop="@dimen/setting_box_margin_top"
        android:background="@drawable/edge"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_box_text_margin"
                android:text="@string/Language_Setting"
                android:textSize="@dimen/setting_box_ko_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_box_text_margin"
                android:text="Language Setting"
                android:textColor="#d9d9d9"
                android:textSize="@dimen/setting_box_eng_text" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_language_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linear_et_language"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ck_logout"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="49dp"
        android:background="#d9d9d9"
        android:text="@string/Logout"
        android:textColor="#5c5f61" />


</RelativeLayout>
